# Extended-Reality-Project

./: .gitignore  README.md  gradle.properties  settings.gradle.kts  strategy_XR.txt
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/be/kuleuven/gt/extendedrealityproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md
app/src/main/assets/www/: model_viewer.html
app/src/main/cpp/: jni_bridge.cpp
app/src/main/cpp/rendering/: renderer_stub.cpp  renderer_stub.h
app/src/main/cpp/training/: trainer_stub.cpp  trainer_stub.h
app/src/main/res/color/: bottom_nav_item_colors.xml
app/src/main/res/drawable/: badge_state_cached.xml  badge_state_downloading.xml  badge_state_remote.xml  bg_capture_selected.xml  bg_capture_unselected.xml  bg_hero_gradient.xml  bg_photo_add.xml  edit_text_cursor_black.xml  ic_arrow_back.xml  ic_splatmarket_logo.xml
app/src/main/res/layout/: activity_camera_capture.xml  activity_generation_progress.xml  activity_item_detail.xml  activity_local_models.xml  activity_main.xml  activity_model_viewer.xml  activity_registration.xml  fragment_ar_viewer.xml  fragment_browse.xml  fragment_sell.xml  item_local_model.xml  item_marketplace_card.xml
app/src/main/res/menu/: bottom_nav_menu.xml  menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
documentation/: api_documentation_kiri.md  project_idea.md  (+2 more)
(+30 files in other folders)
